...
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/timeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="54sp"
                android:fontFamily="sans-serif-thin"/>

            <TextView
...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/set_hours"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:text="Set my working hours"
...
